Fix event day font-weight on mobile

--- a/frontend/static/css/components.css
+++ b/frontend/static/css/components.css
@@ -1071,6 +1071,7 @@
                 padding: 8px;
                 margin-right: 0;
 
+                font-weight: 500;
                 font-size: 145%;
 
                 border-radius: 0;
